syntax = "proto3";

message Message {
    string kind = 1;

    string from = 2;
    string to = 3;

    uint64 term = 4;

    uint64 last_log_term = 5;
    uint64 last_log_index = 6;

    bool vote_grated = 7;

    uint64 previous_log_term = 8;
    uint64 previous_log_index = 9;
    uint64 leader_commit = 10;

    repeated LogEntry log_entries = 11;

    bool success = 12;
    uint64 match_index = 13;

    string proposal_payload = 14;
}

message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    string payload = 3;
}

message SendMessagesResponse {

}

message StatusResponse {
    string state = 1;
}

message StatusRequest {

}

service SRServer {
    rpc GetStatus(StatusRequest) returns (StatusResponse) {}
    rpc SendMessages(stream Message) returns (SendMessagesResponse) {}
}
